-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.1
-
None
-
583e8c821 (dev), 8e21634f9 (6.6), e4ec9a5b7 (6.5)
Window {
property var foo
Component.onCompleted: {
console.log(foo !== null)
console.log(foo === null)
console.log(foo !== undefined)
console.log(foo == undefined)
}
}
produces:
/home/user/tests/build-testing-Desktop_Qt_6_5_1_GCC_64bit-Debug/.rcc/qmlcache/quickcmake_main_qml.cpp:229: error: conversion from ‘bool’ to ‘QChar’ is ambiguous
/home/user/tests/build-testing-Desktop_Qt_6_5_1_GCC_64bit-Debug/.rcc/qmlcache/quickcmake_main_qml.cpp:229:8: error: conversion from ‘bool’ to ‘QChar’ is ambiguous
229 | r2_2 = false;
| ^~~~~
| For Gerrit Dashboard: QTBUG-114418 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 483817,7 | QmlCompiler: Add missing conversion for equality with null or undefined | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 484318,2 | QmlCompiler: Add missing conversion for equality with null or undefined | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 484319,3 | QmlCompiler: Add missing conversion for equality with null or undefined | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |